@@ -3,4 +3,3 @@ Sphinx
 twine
 pytest>3.2.1
 Django>1.8
-docutils==0.12
