@@ -3,3 +3,4 @@ coveralls
 isort<4.3.0
 tox-travis
 invoke==0.12.2
+docutils
