@@ -5,7 +5,7 @@
 
 [tox]
 envlist =
-    {py27,py33,py34,py35}-django18,
+    {py27,py34,py35}-django18,
     {py27,py34,py35}-{django19,django110},
     {py27,py34,py35,py36}-django111,
 
@@ -22,7 +22,6 @@ deps =
 [travis]
 python =
   2.7: py27
-  3.3: py33
   3.4: py34
   3.5: py35
   3.6: py36
